fixed overflow

--- a/CSS/home.css
+++ b/CSS/home.css
@@ -14,9 +14,10 @@ audio::-webkit-media-controls-panel {
 }
 
 body {
-  margin: 0;
-  font-family: 'Agrandir', sans-serif;
   color: #292a5e;
+  font-family: 'Agrandir', sans-serif;
+  margin: 0;
+  overflow-x: hidden;
   width: 100%;
 }
 
@@ -174,7 +175,7 @@ ul img {
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
   .left {
-    margin-top: 1.5rem;
+    margin-top: 1rem;
   }
 
   .left, .right {
